# FlyingFox

./: CMakeLists.txt
CSystemLinux/: CMakeLists.txt
FlyingFox/Sources/: CMakeLists.txt  JSONPredicatePattern.swift
FlyingFox/Tests/: HTTPServerTests.swift
FlyingSocks/Sources/: CMakeLists.txt  Mutex.swift  Socket.swift  SocketPool+ePoll.swift  SocketPool.swift
FlyingSocks/Tests/: SocketPool+PollTests.swift  SocketPool+kQueueTests.swift
cmake/modules/: CMakeLists.txt  FlyingFoxConfig.cmake.in  SwiftSupport.cmake
